// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ElementOrLink /> renders a div 1`] = `
<div>
  <div>
    Hey!
  </div>
</div>
`;

exports[`<ElementOrLink /> renders a link 1`] = `
<div>
  <a
    href="/hello"
  >
    Hey!
  </a>
</div>
`;

exports[`<ElementOrLink /> renders a span 1`] = `
<div>
  <span>
    Hey!
  </span>
</div>
`;

exports[`<ElementOrLink /> renders a span even if a link is provided 1`] = `
<div>
  <span>
    Hey!
  </span>
</div>
`;

exports[`<ElementOrLink /> renders a span if link is an empty string 1`] = `
<div>
  <span>
    Hey!
  </span>
</div>
`;
